{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 17,
  "lineage": "33a41dc3-c09e-8645-dac5-e8a8ba9c8c73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05716fe52ebe24dd3",
            "arn": "arn:aws:ec2:us-east-1:978007052414:elastic-ip/eipalloc-05716fe52ebe24dd3",
            "domain": "vpc",
            "id": "eipalloc-05716fe52ebe24dd3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-95-243-12.compute-1.amazonaws.com",
            "public_ip": "98.95.243.12",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-eip"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:internet-gateway/igw-073a8d054eb178a4a",
            "id": "igw-073a8d054eb178a4a",
            "owner_id": "978007052414",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-igw"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-igw"
            },
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05716fe52ebe24dd3",
            "association_id": "eipassoc-020ed304ab439c6de",
            "connectivity_type": "public",
            "id": "nat-0d3cbb901279bf66d",
            "network_interface_id": "eni-09809e5f075462854",
            "private_ip": "10.0.1.78",
            "public_ip": "98.95.243.12",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f15dc818dcadaf1b",
            "tags": {
              "Name": "basic-vpc-demo-nat"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-004069a8fd529f5cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d3cbb901279bf66d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-004069a8fd529f5cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-004069a8fd529f5cc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073a8d054eb178a4a",
            "id": "r-rtb-03ac1977b8c4d9f091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03ac1977b8c4d9f09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03ac1977b8c4d9f09"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:route-table/rtb-004069a8fd529f5cc",
            "id": "rtb-004069a8fd529f5cc",
            "owner_id": "978007052414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "basic-vpc-demo-private-rt"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "rtb-004069a8fd529f5cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:route-table/rtb-03ac1977b8c4d9f09",
            "id": "rtb-03ac1977b8c4d9f09",
            "owner_id": "978007052414",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "basic-vpc-demo-public-rt"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "rtb-03ac1977b8c4d9f09",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0727b0ea4031c5c82",
            "region": "us-east-1",
            "route_table_id": "rtb-004069a8fd529f5cc",
            "subnet_id": "subnet-0be2a90513bbafabe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6f269f9a586f807",
            "region": "us-east-1",
            "route_table_id": "rtb-004069a8fd529f5cc",
            "subnet_id": "subnet-0d6b08c9c5109502e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb3ffa823be9fdff",
            "region": "us-east-1",
            "route_table_id": "rtb-03ac1977b8c4d9f09",
            "subnet_id": "subnet-0f15dc818dcadaf1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb017db9c6546c4f",
            "region": "us-east-1",
            "route_table_id": "rtb-03ac1977b8c4d9f09",
            "subnet_id": "subnet-0cf3cfd45b2d894b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:subnet/subnet-0be2a90513bbafabe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be2a90513bbafabe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978007052414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-private-1"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-private-1"
            },
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "subnet-0be2a90513bbafabe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:subnet/subnet-0d6b08c9c5109502e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6b08c9c5109502e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "978007052414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-private-2"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-private-2"
            },
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "subnet-0d6b08c9c5109502e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:subnet/subnet-0f15dc818dcadaf1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f15dc818dcadaf1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "978007052414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-public-1"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-public-1"
            },
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "subnet-0f15dc818dcadaf1b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:subnet/subnet-0cf3cfd45b2d894b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf3cfd45b2d894b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "978007052414",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-public-2"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-public-2"
            },
            "vpc_id": "vpc-0f460e427b56700d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "subnet-0cf3cfd45b2d894b9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:978007052414:vpc/vpc-0f460e427b56700d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0705a5bf94380297d",
            "default_route_table_id": "rtb-0aa999f74fa612dd6",
            "default_security_group_id": "sg-0d27ade0fdf07ed27",
            "dhcp_options_id": "dopt-00aa6a1f11c80b439",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f460e427b56700d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa999f74fa612dd6",
            "owner_id": "978007052414",
            "region": "us-east-1",
            "tags": {
              "Name": "basic-vpc-demo-vpc"
            },
            "tags_all": {
              "Name": "basic-vpc-demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "978007052414",
            "id": "vpc-0f460e427b56700d3",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}